[tool.poetry]
name = "hello_python"
version = "0.1.0"
description = ""
authors = ["s-ota-66 <ota.seiji66@jvckenwood.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PySimpleGUI = "^4.32.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
cx-Freeze = "^6.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
